--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
             "HẠNH PHÚC",
             "THÀNH CÔNG",
             "I LOVE YOU",
+            "🌹🌹🌹",
+            "i love you so much",
         ];
 
         const icons = ["🌹", "💐", "🌺", "🌸", "🌷", "✨", "💫", "⭐", "🎀", "💝"];
@@ -212,6 +214,8 @@
         const images = [
             'anh1.jpg',
             'anh2.jpg',
+            'anh3.jpg',
+            'anh4.jpg',
           
         ];
 
